<resources>
    <string name="app_name">YoGala</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="register">註冊</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="checkbox">我已閱讀並同意用戶服務協議和隱私政策</string>
    <string name="login_succes">登入成功</string>
    <string name="setting">設定</string>
    <string name="register_success">註冊成功</string>
    <string name="plz_input_fullname">請輸入姓名</string>
    <string name="plz_input_email">請輸入email</string>
    <string name="plz_input_password">請輸入密碼</string>
    <string name="plz_input_firstname">請輸入名字</string>
    <string name="plz_input_lastname">請輸入姓氏</string>
    <string name="if_no_account">還沒有帳號？註冊</string>
    <string name="if_account">已經有帳號！登入</string>
    <string name="remember_password">記住密碼</string>
    <string name="automatic_login">自動登入</string>
    <string name="course_theme">主題課程</string>
    <string name="before_sleep">睡前紓壓</string>
    <string name="wake_up">早晨甦醒</string>
    <string name="workout">健身美體</string>
    <string name="course_introduction">課程介紹</string>
    <string name="course_name">課程名稱</string>
    <string name="course_introduction_name1">睡前紓壓</string>
    <string name="course_introduction_content1">此課程能幫助您舒緩壓力 \n 並且幫助您進入睡眠</string>
    <string name="btn_enter_course1">進入課程</string>
    <string name="back_pain">遠離腰痠背痛</string>
    <string name="arm_pain">舒緩手臂壓力</string>
    <string name="butt_pain">放鬆臀腿部</string>
    <string name="title_activity_toolbar">ToolbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YoGala</string>
    <string name="nav_header_subtitle">NCU MIS</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="change_password">更改密碼</string>
    <string name="course_list">課程列表</string>
    <string name="profile">個人資料</string>
    <string name="profile_edit">編輯個人資料</string>
    <string name="course_loved">收藏的課程</string>
    <string name="course_completed">已完成課程</string>
    <string name="video">影片講解</string>
    <string name="video_start">開始</string>
    <string name="my_achievement">我的成就</string>
    <string name="this_week_achievement">本周完成度</string>
    <string name="course_history">歷史課程</string>
    <string name="my_menu">我的菜單</string>
    <string name="record">完成紀錄</string>
    <string name="about">關於我們</string>
    <string name="home_second">Home Second</string>
    <string name="confirm">確認</string>
    <string name="last_name">姓氏</string>
    <string name="first_name">名字</string>
    <string name="cellphone">手機</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="spinner_theme">spinner_theme</string>
    <string-array name="theme">
        <item>睡前紓壓</item>
        <item>早晨甦醒</item>
        <item>健身美體</item>
    </string-array>

    <string name="spinner_course">spinner_course</string>
    <string-array name="course1">
        <item>睡前紓壓1</item>
        <item>睡前紓壓2</item>
        <item>睡前紓壓3</item>
    </string-array>
    <string-array name="course2">
        <item>早晨甦醒1</item>
        <item>早晨甦醒2</item>
        <item>早晨甦醒3</item>
    </string-array>
    <string-array name="course3">
        <item>健身美體1</item>
        <item>健身美體2</item>
        <item>健身美體3</item>
    </string-array>
</resources>
