<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txt_course_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:text="@string/course_theme"
        android:textColor="@color/brown1"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/img_theme_background"
        app:layout_constraintEnd_toEndOf="@+id/img_theme_background" />

    <ImageView
        android:id="@+id/img_theme_background"
        android:layout_width="300dp"
        android:layout_height="430dp"
        android:background="@drawable/logo_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/logo_rectangle" />

    <Button
        android:id="@+id/btn_before_sleep"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@color/beige"
        android:text="@string/before_sleep"
        android:textColor="@color/brown1"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/img_theme_background"
        app:layout_constraintStart_toStartOf="@+id/img_theme_background"
        app:layout_constraintTop_toTopOf="@+id/img_theme_background" />

    <Button
        android:id="@+id/btn_wake_up"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/beige"
        android:text="@string/wake_up"
        android:textColor="@color/brown1"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_before_sleep"
        app:layout_constraintStart_toStartOf="@+id/btn_before_sleep"
        app:layout_constraintTop_toBottomOf="@+id/btn_before_sleep" />

    <Button
        android:id="@+id/btn_workout"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@color/beige"
        android:text="@string/workout"
        android:textColor="@color/brown1"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_wake_up"
        app:layout_constraintStart_toStartOf="@+id/btn_wake_up"
        app:layout_constraintTop_toBottomOf="@+id/btn_wake_up" />

</androidx.constraintlayout.widget.ConstraintLayout>