<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/brown1"
        android:textSize="50dp"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        tools:layout_editor_absoluteY="30dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="225dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194"
        app:srcCompat="@drawable/logo_rectangle" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="333dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.452"
        app:srcCompat="@drawable/logonew2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_firstname"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lyt_firstname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lyt_firstname"
        app:layout_constraintTop_toBottomOf="@+id/lyt_firstname"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/edt_lastname"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="@+id/lyt_lastname"
        app:layout_constraintStart_toStartOf="@+id/lyt_lastname"
        app:layout_constraintTop_toBottomOf="@+id/lyt_lastname">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lyt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lyt_email">

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:textColor="@color/checkbox_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_password"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/edt_password"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@color/brown1"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBox_read"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/checkBox_read"
        app:layout_constraintTop_toBottomOf="@+id/lyt_password"
        app:layout_constraintVertical_bias="0.341" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lyt_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lyt_email"
        app:layout_constraintTop_toBottomOf="@+id/lyt_email"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edt_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/lyt_firstname"
        app:layout_constraintTop_toTopOf="@+id/lyt_firstname" />


    <!--TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="604dp"
        android:layout_marginRight="80dp"
        android:text="已經有帳號？登入"
        android:textColor="@color/texthint"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="parent" /-->

</androidx.constraintlayout.widget.ConstraintLayout>